--- a/src/css/resumeCareer.css
+++ b/src/css/resumeCareer.css
@@ -34,11 +34,38 @@
 }
 
 .highlight {
+    position: relative;
     background-color: #f0f8ff; /* 연한 파란색 배경 */
     font-weight: bold; /* 글자 두껍게 */
     border: 1px solid #ccc; /* 경계선 추가 */
     padding: 10px; /* 여백 추가 */
     margin-bottom: 10px; /* 아래 여백 추가 */
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.text-content {
+    flex: 1; /* 텍스트 컨텐츠가 가능한 공간을 차지하도록 설정 */
+}
+
+.image-container {
+    display: flex; /* 이미지를 수평으로 정렬 */
+    flex-direction: column; /* 세로 방향으로 정렬 */
+    width: 20%;
+    height: 80%;
+}
+
+.inline-image {
+    width: 14vw  ; /* 원하는 너비로 설정 */
+    height: 15vh; /* 원하는 높이로 설정 */
+    object-fit: cover; /* 비율 유지하며 잘라내기 */
+    cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
 }
 
 .chatbot-button_resume {
@@ -63,3 +90,42 @@
     justify-content: center; /* 버튼을 수평 중앙 정렬 */
     margin: 20px 0; /* 버튼 간격 조정 */
 }
+
+.modal {
+    display: flex; /* 플렉스박스를 사용하여 중앙 정렬 */
+    position: fixed; /* 화면에 고정 */
+    z-index: 1000; /* 최상위 레이어 */
+    left: 0;
+    top: 0;
+    width: 100%; /* 전체 화면 */
+    height: 100%; /* 전체 화면 */
+    background-color: rgba(0, 0, 0, 0.8); /* 반투명 배경 */
+    justify-content: center; /* 수평 중앙 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
+}
+
+.modal-content {
+    position: relative; /* 상대 위치 */
+    max-width: 90%; /* 최대 너비 90% */
+    max-height: 90%; /* 최대 높이 90% */
+}
+
+.modal-image {
+    max-width: 100%; /* 최대 너비 100% */
+    max-height: 100%; /* 최대 높이 100% */
+}
+
+.close {
+    position: relative; /* 절대 위치 */
+    top: 10px; /* 위쪽 여백 */
+    right: 20px; /* 오른쪽 여백 */
+    color: white; /* 글자 색상 */
+    font-size: 24px; /* 글자 크기 */
+    cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
+}
+
+.modal-image {
+    max-width: 60%; /* 최대 너비 90% */
+    max-height: 60%; /* 최대 높이 90% */
+}
+
