--- a/src/css/resumeCareer.css
+++ b/src/css/resumeCareer.css
@@ -109,30 +109,44 @@
     background-color: rgba(0, 0, 0, 0.8); /* 반투명 배경 */
     justify-content: center; /* 수평 중앙 정렬 */
     align-items: center; /* 수직 중앙 정렬 */
+    aspect-ratio:  1 / 0.7;
+    border-radius:  8px;
+    cursor: pointer;
 }
 
-.modal-content {
-    position: relative; /* 상대 위치 */
-    max-width: 90%; /* 최대 너비 90% */
-    max-height: 90%; /* 최대 높이 90% */
+.modal .imagebox{
+    width: 30vw;
+    height: 50vh;
+    border-radius: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center
 }
 
-.modal-image {
-    max-width: 100%; /* 최대 너비 100% */
-    max-height: 100%; /* 최대 높이 100% */
-}
-
-.close {
-    position: relative; /* 절대 위치 */
-    top: 10px; /* 위쪽 여백 */
-    right: 20px; /* 오른쪽 여백 */
-    color: white; /* 글자 색상 */
-    font-size: 24px; /* 글자 크기 */
-    cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
+.imagebox:hover{
+   filter: grayscale(1) brightness(0.4);
 }
 
 .modal-image {
-    max-width: 60%; /* 최대 너비 90% */
-    max-height: 60%; /* 최대 높이 90% */
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 8px;
+    transition: 0.5s ease-in-out;
+   
+}
+
+.content {
+    font-size: 14px; /* 설명 텍스트 크기 */
+    position: absolute;
+    color: #fff; /* 텍스트 색상 */
+    background-color: rgba(0, 0, 0, 0.7); /* 반투명 배경 */
+    border-radius: 4px; /* 둥근 모서리 */
+    padding: 10px; /* 패딩 */
+    text-align: center; /* 텍스트 중앙 정렬 */
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
 }
 
