--- a/src/css/resumeCareer.css
+++ b/src/css/resumeCareer.css
@@ -1,169 +1,174 @@
 .resume-container {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    background-color: #f9f9f9;
-    display: flex; /* flexbox 사용 */
-    flex-direction: column; /* 세로 방향으로 정렬 */
-    align-items: center; /* 전체 컨텐츠 중앙 정렬 */
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  display: flex; /* flexbox 사용 */
+  flex-direction: column; /* 세로 방향으로 정렬 */
+  align-items: center; /* 전체 컨텐츠 중앙 정렬 */
 }
 
 .resume-title {
-    text-align: center; /* 텍스트 중앙 정렬 */
-    margin-bottom: 20px;
-    width: 100%; /* 전체 너비 사용 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  margin-bottom: 20px;
+  width: 100%; /* 전체 너비 사용 */
 }
 
 .resume-section {
-    width: 95%; /* 너비를 95%로 유지 */
-    height: 100%;
-    margin-bottom: 20px;
-    margin-left: 35px; /* 왼쪽 여백 제거 */
-    align-self: flex-start; /* 섹션들을 왼쪽 정렬 */
+  width: 95%; /* 너비를 95%로 유지 */
+  height: 100%;
+  margin-bottom: 20px;
+  margin-left: 35px; /* 왼쪽 여백 제거 */
+  align-self: flex-start; /* 섹션들을 왼쪽 정렬 */
 }
 
 .resume-section h2 {
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
+  border-bottom: 2px solid #007bff;
+  padding-bottom: 5px;
+  margin-bottom: 10px;
 }
 
-.resume-section p, .resume-section ul {
-    margin: 5px 0;
+.resume-section p,
+.resume-section ul {
+  margin: 5px 0;
 }
 
 .highlight {
-    position: relative;
-    background-color: #f0f8ff; /* 연한 파란색 배경 */
-    font-weight: bold; /* 글자 두껍게 */
-    border: 1px solid #ccc; /* 경계선 추가 */
-    padding: 10px; /* 여백 추가 */
-    margin-bottom: 10px; /* 아래 여백 추가 */
+  position: relative;
+  background-color: #f0f8ff; /* 연한 파란색 배경 */
+  font-weight: bold; /* 글자 두껍게 */
+  border: 1px solid #ccc; /* 경계선 추가 */
+  padding: 10px; /* 여백 추가 */
+  margin-bottom: 10px; /* 아래 여백 추가 */
 }
 
 .flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
 }
 
 .text-content {
-    flex: 1; /* 텍스트 컨텐츠가 가능한 공간을 차지하도록 설정 */
+  flex: 1; /* 텍스트 컨텐츠가 가능한 공간을 차지하도록 설정 */
 }
 
 .image-container {
-    display: flex; /* 이미지를 수평으로 정렬 */
-    flex-direction: column; /* 세로 방향으로 정렬 */
-    width: 20%;
-    height: 80%;
+  display: flex; /* 이미지를 수평으로 정렬 */
+  flex-direction: column; /* 세로 방향으로 정렬 */
+  width: 20%;
+  height: 80%;
 }
 
 .inline-image {
-    width: 13vw  ; /* 원하는 너비로 설정 */
-    height: 10vh; /* 원하는 높이로 설정 */
-    object-fit: cover; /* 비율 유지하며 잘라내기 */
-    cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
+  width: 13vw; /* 원하는 너비로 설정 */
+  height: 10vh; /* 원하는 높이로 설정 */
+  object-fit: cover; /* 비율 유지하며 잘라내기 */
+  cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
 }
 
 .inline-image_one {
-    width: 13vw  ; /* 원하는 너비로 설정 */
-    height: 13vh; /* 원하는 높이로 설정 */
-    object-fit: cover; /* 비율 유지하며 잘라내기 */
-    cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
+  width: 13vw; /* 원하는 너비로 설정 */
+  height: 13vh; /* 원하는 높이로 설정 */
+  object-fit: cover; /* 비율 유지하며 잘라내기 */
+  cursor: pointer; /* 클릭할 수 있음을 나타내는 커서 */
 }
 
 .chatbot-button_resume {
-    display: inline-block; /* inline-block으로 변경하여 블록처럼 동작 */
-    margin: 10px; /* 버튼 간격을 10px로 설정 */
-    padding: 15px 20px; /* 버튼 크기를 키움 */
-    background-color: #007BFF;
-    color: white;
-    border-radius: 20px; /* 챗봇 버튼 형태 */
-    cursor: pointer;
-    transition: background-color 0.3s; /* 부드러운 배경색 전환 */
-    font-size: 16px; /* 버튼 텍스트 크기 조정 */
+  display: inline-block; /* inline-block으로 변경하여 블록처럼 동작 */
+  margin: 10px; /* 버튼 간격을 10px로 설정 */
+  padding: 15px 20px; /* 버튼 크기를 키움 */
+  background-color: #007bff;
+  color: white;
+  border-radius: 20px; /* 챗봇 버튼 형태 */
+  cursor: pointer;
+  transition: background-color 0.3s; /* 부드러운 배경색 전환 */
+  font-size: 16px; /* 버튼 텍스트 크기 조정 */
 }
 
 .chatbot-button_resume:hover {
-    background-color: #0056b3; /* 버튼 호버 효과 */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 효과 추가 */
+  background-color: #0056b3; /* 버튼 호버 효과 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 효과 추가 */
 }
 
 .button-container_resume {
-    display: flex;
-    justify-content: center; /* 버튼을 수평 중앙 정렬 */
-    margin: 20px 0; /* 버튼 간격 조정 */
+  display: flex;
+  justify-content: center; /* 버튼을 수평 중앙 정렬 */
+  margin: 20px 0; /* 버튼 간격 조정 */
 }
 
 .modal {
-    display: flex; /* 플렉스박스를 사용하여 중앙 정렬 */
-    position: fixed; /* 화면에 고정 */
-    z-index: 1000; /* 최상위 레이어 */
-    left: 0;
-    top: 0;
-    width: 100%; /* 전체 화면 */
-    height: 100%; /* 전체 화면 */
-    background-color: rgba(0, 0, 0, 0.8); /* 반투명 배경 */
-    justify-content: center; /* 수평 중앙 정렬 */
-    align-items: center; /* 수직 중앙 정렬 */
-    aspect-ratio:  1 / 0.7;
-    border-radius:  8px;
-    cursor: pointer;
+  display: flex; /* 플렉스박스를 사용하여 중앙 정렬 */
+  position: fixed; /* 화면에 고정 */
+  z-index: 1000; /* 최상위 레이어 */
+  left: 0;
+  top: 0;
+  width: 100%; /* 전체 화면 */
+  height: 100%; /* 전체 화면 */
+  background-color: rgba(0, 0, 0, 0.8); /* 반투명 배경 */
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center; /* 수직 중앙 정렬 */
+  aspect-ratio: 1 / 0.7;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.modal .imagebox{
-    width: 50vw;
-    height: 70vh;
-    border-radius: inherit;
-    display: flex;
-    justify-content: center;
-    align-items: center
+.modal .imagebox {
+  width: 50vw;
+  height: 70vh;
+  border-radius: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.imagebox:hover{
-   filter: grayscale(1) brightness(0.4);
+.imagebox:hover {
+  filter: grayscale(1) brightness(0.4);
 }
 
 .modal-image {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    object-position: 50% 50%;
-    border-radius: 8px;
-    transition: 0.5s ease-in-out;
-   
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  border-radius: 8px;
+  transition: 0.5s ease-in-out;
 }
 
 .content {
-    font-size: 14px; /* 설명 텍스트 크기 */
-    position: absolute;
-    color: #fff; /* 텍스트 색상 */
-    background-color: rgba(0, 0, 0, 0.7); /* 반투명 배경 */
-    border-radius: 4px; /* 둥근 모서리 */
-    padding: 10px; /* 패딩 */
-    text-align: center; /* 텍스트 중앙 정렬 */
-    /* top: 50%;
+  font-size: 14px; /* 설명 텍스트 크기 */
+  position: absolute;
+  color: #fff; /* 텍스트 색상 */
+  background-color: rgba(0, 0, 0, 0.7); /* 반투명 배경 */
+  border-radius: 4px; /* 둥근 모서리 */
+  padding: 10px; /* 패딩 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  /* top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
 }
 
 .roadmap-image {
-    width: 100%;         /* 전체 너비 사용 */
-    height: auto;        /* 비율 유지 */
-    max-width: 1000px;   /* 필요시 최대 너비 제한 */
-    cursor: pointer;
-    margin: 20px auto;
-    display: block;
-    border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  width: 100%; /* 전체 너비 사용 */
+  height: auto; /* 비율 유지 */
+  max-width: 1000px; /* 필요시 최대 너비 제한 */
+  cursor: pointer;
+  margin: 20px auto;
+  display: block;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 768px) {
-    .roadmap-image {
-      max-width: 100%;
-    }
+  .roadmap-image {
+    max-width: 100%;
   }
-  
+}
+
+.career-sep {
+  border: 0;
+  border-top: 1px solid #000000; /* 연한 그레이 */
+  margin: 24px 0; /* 위아래 여백 */
+}
